Bug 294655 - Can't use a src triangle's vertex as dst triangle's vertex in affine transform
Summary: Can't use a src triangle's vertex as dst triangle's vertex in affine transform
Status: RESOLVED FIXED
Alias: None
Product: kig
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: David E. Narvaez
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-23 02:30 UTC by Szczepan Hołyszewski
Modified: 2013-02-13 12:55 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Szczepan Hołyszewski 2012-02-23 02:30:51 UTC
Version:           0.2 (using KDE 4.8.0) 
OS:                Linux

When specifying a general triangle-to-triangle affine transform, vertices of the source triangle cannot be used as vertices of the target triangle. When this is attempted, a new free point is created, and it won't even snap to the source triangle's vertex aimed at.



Reproducible: Didn't try

Steps to Reproduce:
1) Create three points.
2) Start defining an affine transform with these points as vertices of the source triangle.
3) Try using one of the source triangle's vertices points as a vertex of the destination triangle (e.g. a fixed point of the transform).

Actual Results:  
New free point will be created as the target triangle's vertex. The point won't even be snapped to the point you aimed at. It will be only as close to it as the resolution at current zoom level allows.

Expected Results:  
The point aimed at should be reused as a vertex of the target triangle, and no additional point should be created.

A workaround is to define a composition of two transforms (source triangle -> arbitrary triangle -> target triangle) and hide the intermediate result.

OS: Linux (x86_64) release 3.2.6-2-ARCH
Compiler: gcc
Comment 1 Szczepan Hołyszewski 2012-02-23 02:38:13 UTC
Reproducible: always! Forgot to set the option.
Comment 2 David E. Narvaez 2012-03-07 01:12:04 UTC
I can confirm and will be working on this. Thanks for the report!
Comment 3 David E. Narvaez 2013-02-13 12:55:36 UTC
Git commit 8026fc33a4b6a578954f18d10617b8ffe8601d58 by David E. Narváez.
Committed on 13/02/2013 at 13:51.
Pushed by narvaez into branch 'KDE/4.10'.

Let Generic{Affinity,Projectivity}Transform use Repeated Points

The idea is to use source vertex as destination vertext too, but this
also leaves the door open to experiment with degenerate cases like
collapsing two destination vertex
FIXED-IN: 4.10.1
REVIEW: 108917

M  +2    -2    misc/object_constructor.h
M  +10   -0    misc/special_constructors.cc
M  +2    -0    misc/special_constructors.h

http://commits.kde.org/kig/8026fc33a4b6a578954f18d10617b8ffe8601d58