Let Generic{Affinity,Projectivity}Transform use Repeated Points

The idea is to use source vertex as destination vertext too, but this
also leaves the door open to experiment with degenerate cases like
collapsing two destination vertex

BUG: 294655
FIXED-IN: 4.10.1
REVIEW: 108917